@@ -1,12 +1,16 @@
 package com.sdtechno.sdcart.services;
 
-import com.sdtechno.sdcart.models.User;
-import com.sdtechno.sdcart.repositories.UserRepository;
+import java.util.List;
+
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.security.core.userdetails.*;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.core.userdetails.UserDetailsService;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import com.sdtechno.sdcart.models.User;
+import com.sdtechno.sdcart.repositories.UserRepository;
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
@@ -22,7 +26,7 @@ public class CustomUserDetailsService implements UserDetailsService {
         return new org.springframework.security.core.userdetails.User(
             user.getEmail(),
             user.getPassword(),
-            Collections.emptyList() // Add roles here if needed
+            List.of(new SimpleGrantedAuthority(user.getRole()))
         );
     }
 }
